# cookidough-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  check.sh  pyproject.toml  run.sh
.github/workflows/: ci.yml
src/cookidoo_mcp/: __init__.py  __main__.py  annotations.py  config.py  constants.py  models.py  quality.py  server.py  session.py  transport.py  web_import.py
src/cookidoo_mcp/tools/: __init__.py  auth.py  calendar.py  discovery.py  recipes.py  shopping.py
src/cookidough_mcp/: annotation_models.py  config.py  context.py  errors.py  quality.py
src/cookidough_mcp/tools/: __init__.py  collections.py  discovery.py  recipes.py
tests/: _mcp_internals.py  conftest.py  test_annotations.py  test_config.py  test_quality.py  test_server.py  test_session.py  test_session_methods.py  test_tools.py  test_transport.py  test_web_import.py
tests/smoke/: smoke_test.py
