[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cookidough-mcp"
version = "0.1.0"
description = "An unofficial Model Context Protocol (MCP) server for the Thermomix® Cookidoo® platform"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "mcp[cli]>=1.2",
    "cookidoo-api>=0.17.1",
    "aiohttp>=3.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "recipe-scrapers>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
cookidough-mcp = "cookidough_mcp.__main__:main"

[project.urls]
Repository = "https://github.com/Poket-Jony/cookidough-mcp"
Issues = "https://github.com/Poket-Jony/cookidough-mcp/issues"
Documentation = "https://github.com/Poket-Jony/cookidough-mcp#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/cookidough_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle, pyflakes
    "I",            # isort
    "B",            # flake8-bugbear
    "UP",           # pyupgrade
    "SIM",          # flake8-simplify
    "RUF",          # ruff-specific
    "N",            # pep8-naming
    "ANN",          # flake8-annotations
    "PT",           # flake8-pytest-style
    "C4",           # flake8-comprehensions
    "PIE",          # flake8-pie
    "RET",          # flake8-return
    "PTH",          # flake8-use-pathlib
    "ASYNC",        # async-correctness
    "DTZ",          # tz-naive datetime usage
    "LOG",          # logging best practices
    "G",            # logging string formatting
    "T20",          # forbid print()
    "TID",          # tidy imports (no relative drift)
]
ignore = [
    "ANN401",   # `Any` type allowed where used
    "TID252",   # relative imports from parent are idiomatic for our `tools/` package
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PT022"]  # fixtures with `yield` but no teardown are intentional
"tests/smoke/*" = [
    "T201",   # smoke test is a CLI script, intentional stdout
    "DTZ011", # `date.today()` is intentional (local-day calendar lookup)
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["cookidoo_api.*", "recipe_scrapers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# FastMCP's @mcp.tool() decorator is untyped; we accept that locally rather
# than across the whole codebase.
module = ["cookidough_mcp.tools.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=cookidough_mcp --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
